RESOLVED FIXED172071
[Win] fast/cookies/local-file-can-set-cookies.html is flaky.
https://bugs.webkit.org/show_bug.cgi?id=172071
Summary [Win] fast/cookies/local-file-can-set-cookies.html is flaky.
Per Arne Vollan
Reported 2017-05-13 05:16:47 PDT
We need to delete all cookies after each test.
Attachments
Patch (3.87 KB, patch)
2017-05-13 05:19 PDT, Per Arne Vollan
no flags
Per Arne Vollan
Comment 1 2017-05-13 05:19:27 PDT
Per Arne Vollan
Comment 2 2017-05-14 22:52:11 PDT
Thanks for reviewing!
WebKit Commit Bot
Comment 3 2017-05-14 23:20:09 PDT
Comment on attachment 310017 [details] Patch Clearing flags on attachment: 310017 Committed r216857: <http://trac.webkit.org/changeset/216857>
WebKit Commit Bot
Comment 4 2017-05-14 23:20:11 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.