[Win] fast/cookies/local-file-can-set-cookies.html is flaky. https://bugs.webkit.org/show_bug.cgi?id=172071

Reviewed by Alexey Proskuryakov.

Source/WebKit/win:

We need to delete all cookies after each test.

* Interfaces/IWebPreferencesPrivate.idl:
* WebPreferences.cpp:
(WebPreferences::linkPreloadEnabled):
(WebPreferences::clearNetworkLoaderSession):
* WebPreferences.h:

Tools:

* DumpRenderTree/win/DumpRenderTree.cpp:
(resetWebPreferencesToConsistentValues):


Canonical link: https://commits.webkit.org/189037@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@216857 268f45cc-cd09-0410-ab3c-d52691b4dbfc