Source/WebKit/win/WebPreferences.h
@@ -251,6 +251,7 @@ public:
     virtual HRESULT STDMETHODCALLTYPE setResourceTimingEnabled(BOOL);
     virtual HRESULT STDMETHODCALLTYPE linkPreloadEnabled(_Out_ BOOL*);
     virtual HRESULT STDMETHODCALLTYPE setLinkPreloadEnabled(BOOL);
+    virtual HRESULT STDMETHODCALLTYPE clearNetworkLoaderSession();
 
     // WebPreferences
 
