Tools/DumpRenderTree/win/DumpRenderTree.cpp
@@ -880,6 +880,7 @@ static void resetWebPreferencesToConsistentValues(IWebPreferences* preferences)
     prefsPrivate4->setShadowDOMEnabled(TRUE);
     prefsPrivate4->setCustomElementsEnabled(TRUE);
     prefsPrivate4->setModernMediaControlsEnabled(FALSE);
+    prefsPrivate4->clearNetworkLoaderSession();
 
     setAlwaysAcceptCookies(false);
 }
